[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Arrow.gd" type="Script" id=1]
[ext_resource path="res://Sprites/bow and arrow cut/tile005.png" type="Texture" id=2]
[ext_resource path="res://Fonts/Spectral-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[node name="Arrow" type="Area2D"]
z_index = -1
gravity = 10.0
collision_layer = 4
collision_mask = 35
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="ArrowSprite" type="Sprite" parent="."]
position = Vector2( -17.5, 0.75 )
scale = Vector2( 2.5, 1.35 )
texture = ExtResource( 2 )

[node name="ArrowCollider" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 0, 0, -5, -2, -5, 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Label" type="Label" parent="."]
margin_left = -31.0
margin_top = -20.0
margin_right = 2.0
margin_bottom = -6.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_Arrow_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Arrow_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
